--- a/public/device/index.html
+++ b/public/device/index.html
@@ -1,6 +1,24 @@
 <html>
 	<head>
 		<title> WebRTC get audio and video devices</title>
+
+		<style type="text/css">
+			.none {
+				-webkit-filter:none;
+			}
+			.blur {
+				-webkit-filter:blur(3px);
+			}
+			.grayscale {
+				-webkit-filter:grayscale(1);
+			}
+			.invert {
+				-webkit-filter:invert(1);
+			}
+			.sepia {
+				-webkit-filter:sepia(1);
+			}
+		</style>
 	</head>
 	<body>
 		<div>
