--- a/public/device/index.html
+++ b/public/device/index.html
@@ -50,7 +50,13 @@
 			<table>
 				<tr>
 					<td><video autoplay playsinline id="player"></video></td>
+					<td><video playsinline id="replayer"></video></td>
 					<td><div id='constraints' class='output'></div></td>
+				</tr>
+				<tr>
+					<td><button id="record">Start Record</button></td>
+					<td><button id="recplay" disabled>Play</button></td>
+					<td><button id="download" disabled>Download</button></td>
 				</tr>
 			</table>
 		</div>
@@ -63,6 +69,7 @@
 
 
 		<script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+		// <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.0.3/socket.io.js"></script>
 		<script src="./js/client.js"></script>
 	</body>
 </html>
